--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /logs/
 /Untitled.ipynb
 /output.jpg
+/data/
+
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
